# cc-cedict-stardict

./: Cargo.toml
data/: HSK1.txt  HSK2.txt  HSK3.txt  HSK4.txt  HSK5.txt  HSK6.txt  HSK7.txt
macros/: Cargo.toml
macros/src/: lib.rs
src/: cedict_entry.rs  hsk.rs
