[package]
name = "cedict"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
prettify_pinyin = "1.1.2"
file-to-array-macro = { path = "macros" }  # Local path dependency

[workspace]
members = ["macros", "."]  # "." refers to the root package (your main crate)
resolver = "2"             # Required for proper dependency resolution
